# flow

./: CMakeLists.txt  README.md  design_concept_views.md
examples/counter/: CMakeLists.txt  main.cpp
include/flow/: dispatch.hpp  lens.hpp  observable.hpp  reducer.hpp  store.hpp  subscriber.hpp
src/: policy.cpp
tests/: CMakeLists.txt  store.test.cpp
uml/: flow.puml
